--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>MX Lab Sandbox</title>
 </head>
 <body>
-    <h1>adding experiments below...</h1>
+    <h1>MX Lab Sandbox</h1>
+    <p>adding experiments below...</p>
 </body>
 </html>
