--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
     <div class="max-w-7xl mx-auto">
         <header class="text-center mb-8">
-            <h1 class="text-4xl font-extrabold text-blue-400">The Chemical Sandbox 🧪</h1>
-            <p class="text-gray-400 mt-2">Design your experiment and observe the simulated results.</p>
+            <h1 class="text-4xl font-extrabold text-blue-400">MX Sandbox</h1>
+            <p class="text-gray-400 mt-2">Choose your desired experiment below to start.</p>
         </header>
 
         <main class="grid grid-cols-1 lg:grid-cols-3 gap-8">
