--- a/index.html
+++ b/index.html
@@ -99,51 +99,120 @@
             },
 
             // EXPERIMENT 2: Activity Series
-            activitySeries: {
-                key: 'activitySeries',
-                name: "Activity Series (Single Replacement)",
-                description: "Combine a solid metal with an aqueous salt solution.",
-                options: [
-                    { id: 'solidMetal', label: 'Solid Metal', type: 'select', choices: ['Magnesium (Mg)', 'Zinc (Zn)', 'Copper (Cu)', 'Aluminum (Al)', 'Nickel (Ni)', 'Iron (Fe)'], default: 'Zinc (Zn)' },
-                    { id: 'solutionSalt', label: 'Aqueous Salt Solution', type: 'select', choices: ['AgNO3', 'Al(NO3)3', 'Ca(NO3)2', 'Fe(NO3)2', 'KNO3', 'SnCl2 in HCl', 'Zn(NO3)2', 'Cu(NO3)2'], default: 'AgNO3' }
-                ],
-                getResult: (opts) => {
-                    // Extract symbols from parentheses
-                    const metal = opts.solidMetal.match(/\((.*?)\)/)[1];
-                    // Removing the salt formula part to isolate the metal symbol
-                    const solutionSaltMatch = opts.solutionSalt.match(/\((.*?)\)/);
-                    let solutionMetal = '';
-                    if (solutionSaltMatch && solutionSaltMatch[1]) {
-                        // Extracting metal from formula like CuSO4
-                        if (opts.solutionSalt.includes('CuSO')) solutionMetal = 'Cu';
-                        else if (opts.solutionSalt.includes('AgNO')) solutionMetal = 'Ag';
-                        else if (opts.solutionSalt.includes('ZnCl')) solutionMetal = 'Zn';
-                        else if (opts.solutionSalt.includes('Mg(NO')) solutionMetal = 'Mg';
-                    }
-                    
-                    // Simplified Activity Series (Mg > Zn > Cu > Ag). Higher index is less reactive.
-                    const series = ['Mg', 'Zn', 'Cu', 'Al', 'Ni', 'Fe'];
+activitySeries: {
+    key: 'activitySeries',
+    name: "Activity Series (Single Replacement)",
+    description: "Combine a solid metal with an aqueous salt solution.",
 
-                    const metalIndex = series.indexOf(metal);
-                    const solutionIndex = series.indexOf(solutionMetal);
+    options: [
+        {
+            id: 'solidMetal',
+            label: 'Solid Metal',
+            type: 'select',
+            choices: [
+                'Magnesium (Mg)',
+                'Aluminum (Al)',
+                'Zinc (Zn)',
+                'Iron (Fe)',
+                'Nickel (Ni)',
+                'Copper (Cu)'
+            ],
+            default: 'Zinc (Zn)'
+        },
+        {
+            id: 'solutionSalt',
+            label: 'Aqueous Salt Solution',
+            type: 'select',
+            choices: [
+                'AgNO3',
+                'Cu(NO3)2',
+                'Zn(NO3)2',
+                'Fe(NO3)2',
+                'Al(NO3)3',
+                'Ca(NO3)2',
+                'KNO3',
+                'SnCl2'
+            ],
+            default: 'AgNO3'
+        }
+    ],
 
-                    let title, text; // No colorClass or liquidHeight for pure text
+    getResult: (opts) => {
+        // Extract solid metal symbol (from "Zinc (Zn)")
+        const solidMetal = opts.solidMetal.match(/\((.*?)\)/)[1];
 
-                    if (metalIndex < solutionIndex) {
-                        // Reaction occurs: More active metal replaces less active metal ion
-                        const reactionEquation = `$$\\text{${metal}} (s) + \\text{${solutionMetal}^{2+}} (aq) \\rightarrow \\text{${solutionMetal}} (s) + \\text{${metal}^{2+}} (aq)$$`;
-                        
-                        title = "Reaction Occurs!";
-                        text = `The solid metal ($\text{${metal}}$) is more reactive than the metal in the solution ($\text{${solutionMetal}}$). The $\text{${solutionMetal}}$ ions are replaced. You would observe the solid $\text{${solutionMetal}}$ depositing and the liquid's color changing due to the formation of $\text{${metal}^{2+}}$ ions. ${reactionEquation}`;
-                    } else {
-                        title = "No Reaction ($\text{NR}$)";
-                        text = `The solid metal ($\text{${metal}}$) is less active than the metal in the solution ($\text{${solutionMetal}}$). No single replacement reaction will occur. The system remains unchanged.`;
-                    }
-                    return { title, text };
-                }
-            },
+        // Map solution salts to metal ions
+        const saltToMetal = {
+            AgNO3: 'Ag',
+            'Cu(NO3)2': 'Cu',
+            'Zn(NO3)2': 'Zn',
+            'Fe(NO3)2': 'Fe',
+            'Al(NO3)3': 'Al',
+            'Ca(NO3)2': 'Ca',
+            KNO3: 'K',
+            SnCl2: 'Sn'
         };
 
+        const solutionMetal = saltToMetal[opts.solutionSalt];
+
+        // Simplified but correct activity series (most → least reactive)
+        const activitySeries = [
+            'K',
+            'Ca',
+            'Mg',
+            'Al',
+            'Zn',
+            'Fe',
+            'Ni',
+            'Sn',
+            'Cu',
+            'Ag'
+        ];
+
+        const solidIndex = activitySeries.indexOf(solidMetal);
+        const solutionIndex = activitySeries.indexOf(solutionMetal);
+
+        let title, text;
+
+        // Safety check
+        if (solidIndex === -1 || solutionIndex === -1) {
+            title = "Error";
+            text = "Unable to determine reactivity due to invalid selection.";
+            return { title, text };
+        }
+
+        // Same metal → no reaction
+        if (solidMetal === solutionMetal) {
+            title = "No Reaction (NR)";
+            text = `The solid metal and the metal ion in solution are the same (${solidMetal}). No single replacement reaction occurs.`;
+            return { title, text };
+        }
+
+        // Reaction condition
+        if (solidIndex < solutionIndex) {
+            title = "Reaction Occurs!";
+
+            text = `
+The solid metal (${solidMetal}) is higher in the activity series than the metal ion in solution (${solutionMetal}).
+
+As a result, ${solidMetal} displaces ${solutionMetal} from the aqueous solution.
+
+You would observe:
+• Formation of solid ${solutionMetal} metal  
+• A change in solution appearance due to ${solidMetal} ions entering solution
+`;
+        } else {
+            title = "No Reaction (NR)";
+            text = `
+The solid metal (${solidMetal}) is lower in the activity series than the metal ion in solution (${solutionMetal}).
+
+Because it is less reactive, no single replacement reaction occurs.
+`;
+        }
+
+        return { title, text };
+    }
+}
         let currentExperimentKey = null;
 
         // --- DOM ELEMENTS ---
