--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             }
             else {
             title = "No Reaction (NR)";
-            text = "The solid metal (${solidMetal}) is lower in the activity series than the metal ion in solution (${solutionMetal}). Because it is less reactive, no single replacement reaction occurs.";
+            text = "The solid metal (${solidMetal}) is lower in the activity series than the metal ion in solution (${solutionMetal}). No single replacement reaction occurs.";
             }
             return { title, text };
         }
