--- a/index.html
+++ b/index.html
@@ -63,21 +63,17 @@
             
             <div class="space-y-6">
                 <div>
-                    <h4 class="text-xs font-bold text-gray-500 uppercase tracking-widest mb-2">Development Team</h4>
+                    <h4 class="text-xs font-bold text-gray-500 uppercase tracking-widest mb-2">Development</h4>
                     <ul class="space-y-3">
                         <li>
-                            <p class="text-blue-300 font-medium">Lead Developer Name</p>
-                            <p class="text-xs text-gray-400">Contact: lead@mx-lab.edu</p>
-                        </li>
-                        <li>
-                            <p class="text-blue-300 font-medium">Simulation Specialist</p>
-                            <p class="text-xs text-gray-400">Contact: dev-team@mx-lab.edu</p>
+                            <p class="text-blue-300 font-medium">Doyoon Kim</p>
+                            <p class="text-xs text-gray-400">Contact: dyoonkim07@gmail.com</p>
                         </li>
                     </ul>
                 </div>
                 <div class="pt-6 border-t border-gray-700">
                     <p class="text-[11px] text-gray-500 leading-relaxed italic">
-                        This sandbox was designed as an interactive tool for studying the chemical properties of elements. Special thanks to the open-source community for Tailwind CSS and MathJax.
+                        This sandbox was designed as an interactive tool for the MX Lab. This website is open sourced on GitHub! Feel free to send in any bug reports or suggestions as issues or email dyoonkim07@gmail.com. Special thanks to the open-source community for Tailwind CSS and MathJax.
                     </p>
                 </div>
             </div>
