--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <ul class="space-y-3">
                         <li>
                             <p class="text-blue-300 font-medium">Doyoon Kim</p>
-                            <p class="text-xs text-gray-400">Contact: dyoonkim07@gmail.com</p>
+                            <a href="mailto:dyoonkim07@gmail.com">Contact: dyoonkim07@gmail.com</a>
                         </li>
                     </ul>
                 </div>
