--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 
         // --- CORE EXPERIMENT DATA ---
         const experiments = {
+        // EXPERIEMENT 1: HAMMER TEST
             hammerTest: {
                 key: 'hammerTest',
                 name: "Hammer",
@@ -104,6 +105,7 @@
                     return { title: `${element} shatters!`, text: `The ${element} sample shattered into pieces.` };
                 }
             },
+        // EXPERIEMENT 2: ACTIVITY SERIES
             activitySeries: {
                 key: 'activitySeries',
                 name: "Activity Series Kit",
@@ -124,8 +126,7 @@
                     return { title: "No Reaction", text: `${solidMetal} is less reactive than ${solutionMetal}.` };
                 }
             },
-// EXPERIMENT 3: Water Testing
-
+            // EXPERIMENT 3: Water Testing
                 waterTest: {
                 key: 'waterTest',
                 name: "Beaker and Water",
