--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             // EXPERIMENT 4: MELTING
                 meltingTest: {
                 key: 'meltingTest',
-                name: "Crucible, Bunsen burner, matches",
+                name: "Crucible, Bunsen burner, Matches",
                 description: "Use a crucible, bunsen burner, and matches to heat up the element.",
                 options: [
                     { id: 'elementSelected', label: 'Element to be Melted', type: 'select', choices: ['Zinc (Zn)', 'Iron (Fe)', 'Aluminum (Al)', 'Copper (Cu)', 'Magnesium (Mg)', 'Nickel (Ni)', 'Iodine (I)'], default: 'Zinc (Zn)' },
