--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </div>
     </div>
 
-    <button onclick="checkTeacher()" 
-            class="fixed bottom-4 right-4 text-gray-600 hover:text-gray-400 text-xs bg-gray-800/30 px-3 py-2 rounded border border-gray-700/50 transition-all">
-        Teacher Access
-    </button>
+<button onclick="checkTeacher()" class="teacher-btn">
+    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg>
+    Teacher Access
+</button>
 
     <script>
         // Student Login Logic
