--- a/lab.html
+++ b/lab.html
@@ -38,34 +38,33 @@
         <button onclick="closeModal('mx-modal')" class="w-full bg-blue-600 mt-6 py-2 rounded-lg">Close</button>
     </div></div>
 
-    <div id="ack-modal" class="hidden-modal fixed inset-0 bg-black/80 backdrop-blur-md flex items-center justify-center p-4">
-        <div class="bg-gray-800 border border-gray-600 w-full max-w-md rounded-2xl shadow-2xl p-8 transform transition-all scale-100">
-            <div class="flex justify-between items-center border-b border-gray-700 pb-4 mb-6">
-                <h2 class="text-2xl font-bold text-blue-400">Project Acknowledgements</h2>
-                <button onclick="toggleModal(false)" class="text-gray-400 hover:text-white text-3xl">&times;</button>
+<div id="ack-modal" class="modal">
+    <div class="bg-gray-800 border border-gray-600 w-full max-w-md rounded-2xl shadow-2xl p-8 transform transition-all scale-100 mx-4">
+        <div class="flex justify-between items-center border-b border-gray-700 pb-4 mb-6">
+            <h2 class="text-2xl font-bold text-blue-400">Project Acknowledgements</h2>
+            <button onclick="closeModal('ack-modal')" class="text-gray-400 hover:text-white text-3xl">&times;</button>
+        </div>
+        <div class="space-y-6">
+            <div>
+                <h4 class="text-xs font-bold text-gray-500 uppercase tracking-widest mb-2">Development</h4>
+                <ul class="space-y-3">
+                    <li>
+                        <p class="text-blue-300 font-medium">Doyoon Kim</p>
+                        <a href="mailto:dyoonkim07@gmail.com" class="text-blue-400 hover:underline">Contact: dyoonkim07@gmail.com</a>
+                    </li>
+                </ul>
             </div>
-            <div class="space-y-6">
-                <div>
-                    <h4 class="text-xs font-bold text-gray-500 uppercase tracking-widest mb-2">Development</h4>
-                    <ul class="space-y-3">
-                        <li>
-                             <p class="text-blue-300 font-medium">Doyoon Kim</p>
-                            <a href="mailto:dyoonkim07@gmail.com" class="text-blue-400 hover:underline">Contact: dyoonkim07@gmail.com</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="pt-6 border-t border-gray-700">
-                    <p class="text-[11px] text-gray-500 leading-relaxed italic">
-                        This sandbox was designed as an interactive tool for the MX Lab. This website is open sourced on GitHub! Feel free to send in any bug reports or suggestions as issues or email dyoonkim07@gmail.com. Special thanks to the open-source community for Tailwind CSS and MathJax.
-                    </p>
-                </div>
+            <div class="pt-6 border-t border-gray-700">
+                <p class="text-[11px] text-gray-500 leading-relaxed italic">
+                    This sandbox was designed as an interactive tool for the MX Lab. This website is open sourced on GitHub! Special thanks to the open-source community for Tailwind CSS and MathJax.
+                </p>
             </div>
-
-<div class="flex flex-col gap-3 mt-8">
-    <button id="run-btn" disabled onclick="runLab()" 
-            class="w-full bg-gray-600 py-4 rounded-xl font-bold opacity-50 transition-all shadow-lg">
-        Run Experiments
-    </button>
+        </div>
+        <button onclick="closeModal('ack-modal')" class="w-full mt-6 py-3 bg-gray-700 hover:bg-gray-600 rounded-xl font-bold transition-colors">
+            Return to Lab
+        </button>
+    </div>
+</div>
     
     <button onclick="resetSelections()" 
             class="text-gray-500 hover:text-red-400 text-sm font-medium transition-colors underline underline-offset-4 text-center">
